smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/namespace-syntax-error.smithy
// Invalid namespace name `not.valid.trailing.`
namespace not.valid.trailing.
